cald-dav-binding more tests and functions